--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="gris">#5F5F5F</color>
     <color name="azul">#87CEEB</color>
     <color name="transparent"></color>
+    <color name="colorPrimary">#00BCD4</color>
 </resources>
