--- a/app/src/main/res/layout/pantalla_bienvenida.xml
+++ b/app/src/main/res/layout/pantalla_bienvenida.xml
@@ -69,4 +69,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textBienvenida2"
         app:layout_constraintVertical_bias="0.172" />
+
+    <Button
+        android:id="@+id/btnLlenarDB"
+        android:layout_width="203dp"
+        android:layout_height="47dp"
+        android:layout_marginEnd="92dp"
+        android:background="@color/colorPrimary"
+        android:text="Poblar DB Inicial"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.96"
+        tools:ignore="TextContrastCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
