--- a/app/src/main/res/layout/agregar_pregunta_multimedia.xml
+++ b/app/src/main/res/layout/agregar_pregunta_multimedia.xml
@@ -87,7 +87,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/naranja"
         android:text="Imagen"
         android:textColor="@android:color/white"
         android:textSize="18sp"
@@ -103,7 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/colorPrimary"
+        android:backgroundTint="@color/naranja"
         android:text="Video"
         android:textColor="@android:color/white"
         android:textSize="18sp"
