--- a/app/src/main/res/layout/pantalla_bienvenida.xml
+++ b/app/src/main/res/layout/pantalla_bienvenida.xml
@@ -62,6 +62,7 @@
         android:layout_width="150dp"
         android:layout_height="50dp"
         android:background="@color/naranja"
+        android:backgroundTint="@color/naranja"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,11 +71,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textBienvenida2"
         app:layout_constraintVertical_bias="0.172" />
 
+
     <Button
         android:id="@+id/btnLlenarDB"
         android:layout_width="203dp"
         android:layout_height="48dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/naranja"
         android:text="Poblar DB Inicial"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
