--- a/app/src/main/res/layout/preguntas_res_multimedia.xml
+++ b/app/src/main/res/layout/preguntas_res_multimedia.xml
@@ -69,7 +69,7 @@
         android:id="@+id/resSpeechbtn"
         android:layout_width="227dp"
         android:layout_height="46dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/naranja"
         android:text="DICTAR RESPUESTA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
